# real_time_sw

./: .gitignore  README.md  dscovr_07days_all.py  pyproject.toml  sw_rt_ts_dwld_upld_dscovr_07days_automated.py  sw_rt_ts_mp4_dscovr.py  test_run.py
codes/: ace_2hr_data.html  ace_bokeh_plot.py  ace_plotly.py  chao_plane.pro  dipole.py  extract_frames.py  extract_moon.py  get_lunar_phase.py  get_lunar_pos.py  http_option.py  lin_mpause.pro  lin_mpause.py  look_direction_test.py  lunar_location.py  lunar_location_v2.py  lunar_phase.py  lunar_phase_v2.py  lunar_position_movie.py  magnetopause_calculator.py  misc_codes.py  r_shue.pro  ra_dec_to_gse.py  read_eve_locs_data.py  run_file.sh  run_file_cosmere.sh  run_file_cosmere_luna.sh  sunpy_test.py  sw_rt_ace_1day.py  sw_rt_ace_2hr.py  sw_rt_ace_2hr_simple.py  sw_rt_ace_7days.py  sw_rt_dsvr_1day.py  sw_rt_dsvr_2hr.py  sw_rt_ts_dwld_upld_dscovr_07days_automated.py  yang_plane.pro
dscovr_data/: oe_f1m_dscovr_s20240630000000_e20240630235959_p20240701022215_pub.nc  oe_f1m_dscovr_s20240701000000_e20240701235959_p20240702022139_pub.nc  oe_f1m_dscovr_s20240702000000_e20240702235959_p20240703022215_pub.nc  oe_f1m_dscovr_s20240703000000_e20240703235959_p20240704022209_pub.nc  oe_f1m_dscovr_s20240704000000_e20240704235959_p20240705022214_pub.nc  oe_f1m_dscovr_s20240705000000_e20240705235959_p20240706022226_pub.nc  oe_f1m_dscovr_s20240706000000_e20240706235959_p20240707022217_pub.nc  oe_f1m_dscovr_s20240707000000_e20240707235959_p20240708022208_pub.nc  oe_f1m_dscovr_s20240708000000_e20240708235959_p20240709022428_pub.nc  (+68 more)
(+1 files in other folders)
