[tool.poetry]
name = "codes"
version = "0.1.0"
description = ""
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.24.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
imageio = "^2.34.2"
geopack = "^1.0.10"
imageio-ffmpeg = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
